--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <head> 
 	<title>Website Salsabila Putri</title>
-<style>
-body {background-color: #D3D3D3}
-table {font-family: inherit;border-collapse: collapse;width: 50%}
-th,td {border: 1px solid #004466;text-align: left;padding: 5px}
-tr:nth-child(odd) {background-color: #A9A9A9}
-p {font-family: initial;text-align: justify;width: 65%}
-</style>
+	<link rel="stylesheet" href="style.css">
 </head>
-<center>
-<h1 style="font-family: unset;color: #800080">~WEBSITE KEDUA SALSA~</h1>
-<h2 style="font-family: sans-serif;color: #4D4D4D">Profil</h2>
-<img src="Salsabila Putri.jpeg" width="170" height="220" border="2px" alt="foto-salsabila">
+<body>
+<div class="sticky">
+	<h1>~WEBSITE KEDUA SALSA~</h1>
+</div>
+<div class="center">
+	<h2>Profil</h2>
+</div>
+<div class="center">
+	<img src="Salsabila Putri.jpeg" width="170" height="220" border="2px" alt="foto-salsabila">
+</div>
+<div class="center">
 <table> 
 	<tr>
 		<th>Nama Lengkap</th>
@@ -58,10 +59,13 @@ p {font-family: initial;text-align: justify;width: 65%}
 		<th>Instagram</td>
 		<td><a style="color: #336699" href="http://instagram.com/salsabilaapp_">@salsabilaapp_</a></td>
 	</tr>
-	</table>
-	<br>
-	<h2 style="font-family: sans-serif;color: #4D4D4D">Pengalaman Pembelajaran Jarak Jauh Selama Pandemi Covid-19</h2>
-		<h3 style="font-family; sans-serif;color: #000000"> 
+</table>
+</div>
+<div class="center">
+	<h2>Pengalaman Pembelajaran Jarak Jauh Selama Pandemi Covid-19</h2>
+</div>
+<div>
+		<h3> 
 		<p> <i>Assalamualaikum</i> apa kabar teman teman semua? semoga kita semua selalu berada di dalam lindungan Allah SWT, Aamiin. Kita semua pasti sudah 
 		mengetahui sejak Maret 2020 bahwa virus corona yang awal mulanya menyerang Negara China telah masuk ke Indonesia, ya tanah air tercinta kita ini. 
 		Mulai saat itu yang pada awalnya kita senang dan bahagia karena dikabarkan akan libur selama 2 minggu ternyata liburnya menjadi berkepanjangan dan 
@@ -80,7 +84,7 @@ p {font-family: initial;text-align: justify;width: 65%}
 		kegiatan seperti biasa. Sepertinya cukup sampai disini dulu ceritaku tentang pengalaman Pembelajaran Jarak Jauh (PJJ). Dan besar harapanku agar pandemi 
 		ini cepat berakhir dan kita bisa melakukan kegiatan secara normal kembali, Aamiin. Sampai berjumpa diblogku selanjutnya!! Terima kasih 
 		<i>Wassalamualaikum</i>.</p>
-	</h3>
-	</center>
-	</body>
-	</html>
+		</h3>
+</div>
+</body>
+</html>
