--- a/INDEX.html
+++ b/INDEX.html
@@ -44,7 +44,7 @@
   <h1 class="display-4"><b>SELAMAT DATANG <br>DI WEBSITE SALSA</b></h1>
   <hr class="my-4">
   <p>Don't forget to be happy^^</p>
-  <button type="button" class="btn btn-light" > <a href="http://Salsabilaput65.github.io">Link Website</a> </button>
+  <button type="button" class="btn btn-light" > <a href="http://Salsabilaput65.github.io/INDEX.html">Link Website</a> </button>
 </div>
 
 <div class="icon-bar">
